[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-time-series"
maintainers = [{ name = "Matteo Becchi", email = "bechmath@gmail.com" }]

dependencies = ["numpy", "networkx", "matplotlib"]
requires-python = ">=3.8"
dynamic = ["version"]
readme = "README.rst"
description = "Tools for the handling of time-series of graphs."

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "sphinx",
    "sphinx-copybutton",
    "build",
    "twine",
    "furo",
    "numba",
]

[project.urls]
github = "https://github.com/matteobecchi/graph_time_series"
#documentation = "https://dynsight.readthedocs.io/en/latest/"

[tool.setuptools_scm]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "COM812", "ISC001", "FBT001", "FBT002", "PLR0913", "G004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S101",
    "INP001",
    "ANN001",
    "ANN201",
]
"examples/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S101",
    "INP001",
    "C901",
    "N803",
    "ANN001",
    "PLR0912",
    "PLR0915",
]
"docs/source/conf.py" = ["D100", "INP001"]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = true
exclude = 'docs/build/html/_static'

[[tool.mypy.overrides]]
module = ['matplotlib.*', 'networkx.*']
ignore_missing_imports = true
